# rust-dbkit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC_SHEET.md
.codex/: hooks.json
.codex/hooks/: format_on_stop.sh  session_start_snapshot.sh
.github/workflows/: release.yml  tests.yml
crates/dbkit/: Cargo.toml
crates/dbkit-core/: Cargo.toml
crates/dbkit-core/src/: compile.rs  expr.rs  func.rs  interval.rs  lib.rs  load.rs  mutation.rs  query.rs  rel.rs  schema.rs  types.rs
crates/dbkit-core/tests/: column_compare_api.rs  dynamic_interval_math_sql.rs  interval_support.rs  join_sql.rs  locking_sql.rs  mutation_sql.rs  row_value_in_sql.rs  sql_compiler.rs  subquery_sql.rs  type_support.rs  vector_support.rs
crates/dbkit-derive/: Cargo.toml
crates/dbkit-derive/src/: lib.rs
crates/dbkit-derive/tests/: ui.rs
crates/dbkit-derive/tests/ui/: basic.rs  fail_unloaded.rs  fail_unloaded.stderr
crates/dbkit/src/: database.rs  error.rs  executor.rs  func.rs  joined.rs  lib.rs  model.rs  query_ext.rs  runtime.rs
crates/dbkit/tests/: active_update_partial.rs  arithmetic_integration.rs  arithmetic_support.rs  derive_ui.rs  dynamic_interval_math_integration.rs  dynamic_interval_math_support.rs  enum_sql_support.rs  integration_column_compare_api.rs  integration_db_enum.rs  integration_exists_subquery.rs  integration_interval.rs  integration_pgvector.rs  integration_postgres.rs  integration_row_value_in.rs  joined_sql.rs  lock_scope_sql.rs  migrations.rs  one_limit.rs  ordered_comparison_value_support.rs  row_value_enum_sql.rs  timestamptz_support.rs  type_support.rs  vector_support.rs
crates/dbkit/tests/ui/: Cargo.toml  basic.rs  fail_arithmetic_datetime_integer.rs  fail_arithmetic_string_rhs.rs  fail_char_length_non_text.rs  fail_conflict_column_ref.rs  fail_conflict_column_ref.stderr  fail_conflict_cross_model.rs  fail_conflict_cross_model.stderr  fail_db_enum_column_mismatch.rs  fail_db_enum_duplicate_wire_name.rs  fail_db_enum_optional_value_mismatch.rs  fail_db_enum_value_mismatch.rs  fail_distinct_after_for_update.rs  fail_distinct_after_for_update_nowait.rs  fail_distinct_after_for_update_skip_locked.rs  fail_for_update_after_distinct.rs  fail_for_update_after_group_by.rs  fail_for_update_after_group_by_having.rs  fail_for_update_nowait_after_distinct.rs  fail_for_update_skip_locked_after_distinct.rs  fail_group_by_after_for_update.rs  fail_group_by_having_after_for_update.rs  fail_interval_float_hours.rs  fail_interval_string_hours.rs  fail_nowait_without_for_update.rs  fail_pgvector_dimension_mismatch.rs  fail_pgvector_raw_vec.rs  fail_row_value_in_tuple_arity.rs  fail_row_value_in_type_mismatch.rs  fail_skip_locked_without_for_update.rs  fail_trim_non_text.rs  fail_unloaded.rs  pass_arithmetic_api.rs  pass_conflict_update_tuple32.rs  pass_conflict_update_tuple4.rs  pass_datetime_utc.rs  pass_db_enum_crud.rs  pass_db_enum_shared_type_across_models.rs  pass_dynamic_interval_math_api.rs  (+8 more)
