[workspace]
members = [
  "crates/dbkit-core",
  "crates/dbkit-derive",
  "crates/dbkit",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.2.0"

[workspace.dependencies]
dbkit-core = { path = "crates/dbkit-core", version = "0.2.0" }
dbkit-derive = { path = "crates/dbkit-derive", version = "0.2.0" }
thiserror = "1"
