[package]
name = "dbkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and SQL building blocks for the dbkit ORM."
repository = "https://github.com/alexeichhorn/rust-dbkit"

[dependencies]
chrono = "0.4"
serde_json = "1.0.149"
uuid = "1"

[dev-dependencies]
chrono = "0.4"
insta = "1"
serde_json = "1.0.149"
uuid = "1"
