[package]
name = "dbkit-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc-macro derives for the dbkit ORM."
repository = "https://github.com/alexeichhorn/rust-dbkit"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"
