[package]
name = "dbkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Postgres-first async ORM-ish library with type-level loaded/unloaded relations."
repository = "https://github.com/alexeichhorn/rust-dbkit"
readme = "../../README.md"

[features]
default = []
migrations = ["sqlx/migrate"]

[dependencies]
dbkit-core.workspace = true
dbkit-derive.workspace = true
thiserror.workspace = true
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "bigdecimal"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
chrono = "0.4"
dotenvy = "0.15"
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = "1"
ui_test = "0.30"

[[test]]
name = "derive_ui"
path = "tests/derive_ui.rs"
harness = false
